吹き出しとか

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_core: ^2.1.1
   cloud_firestore: ^4.0.4
   get: ^4.6.5
+  speech_balloon: ^0.0.4 
 
 dev_dependencies:
   flutter_test:
