--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,23 @@ dependencies:
       url: https://github.com/yako-dev/flutter-settings-ui.git
       ref: master
   provider: ^6.0.4 #プロバイダーのパッケージ
-  cupertino_icons: ^1.0.2
   firebase_core: ^2.1.1
   cloud_firestore: ^4.0.4
   get: ^4.6.5
   speech_balloon: ^0.0.4 
+  cupertino_icons: ^1.0.5
+  faker: ^2.0.0
+  file_picker: ^5.2.2
+  firebase_auth: ^4.1.0
+  firebase_storage: ^11.0.3
+  flutter_chat_types: ^3.6.0
+  flutter_chat_ui: ^1.6.6
+  http: ^0.13.5
+  image_picker: ^0.8.6
+  mime: ^1.0.2
+  open_filex: ^4.2.2
+  path_provider: ^2.0.11
+  flutter_firebase_chat_core: ^1.6.4
 
 dev_dependencies:
   flutter_test:
