詳細画面の編集

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   firebase_core: ^2.1.1
   cloud_firestore: ^4.0.4
   get: ^4.6.5
-  speech_balloon: ^0.0.4 
+  bubble: ^1.2.1
   cupertino_icons: ^1.0.5
   faker: ^2.0.0
   file_picker: ^5.2.2
