--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   open_filex: ^4.2.2
   path_provider: ^2.0.11
   flutter_firebase_chat_core: ^1.6.4
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
