--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:670650028874:ios:31f06b627285a6a03267b3",
-  "FIREBASE_PROJECT_ID": "enpit-weeee",
-  "GCM_SENDER_ID": "670650028874"
+  "GOOGLE_APP_ID": "1:631066516008:ios:ad4eb9f0d00a2b4eb4731d",
+  "FIREBASE_PROJECT_ID": "empit-weee",
+  "GCM_SENDER_ID": "631066516008"
 }
