--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_firebase_chat_core: ^1.6.4
   uuid: ^3.0.7
   cloud_firestore: ^4.1.0
+  font_awesome_flutter: ^10.3.0
+  fluttertoast: ^8.1.1
 
 dev_dependencies:
   flutter_test:
