--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_firebase_chat_core: ^1.6.4
   uuid: ^3.0.7
   cloud_firestore: ^4.1.0
-  font_awesome_flutter: ^10.3.0
+  google_sign_in: ^5.4.2
   fluttertoast: ^8.1.1
 
 dev_dependencies:
