--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/eat.png
+    - assets/images/eat.png
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
