ログイン画面

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,10 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/eat.png
+    - assets/images/forget.png
+    - assets/images/signup.png
+    - assets/images/travel.png
+    - assets/images/weeee_logo.png
 
 
   # To add assets to your application, add an assets section, like this:
