--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,14 +21,14 @@ dependencies:
     sdk: flutter
   intl: ^0.17.0  # 日付対応
   provider: ^6.0.4 #プロバイダーのパッケージ
-  firebase_core: ^2.4.0
+  firebase_core: ^2.1.1
   get: ^4.6.5
   bubble: ^1.2.1
   cupertino_icons: ^1.0.5
   faker: ^2.0.0
   file_picker: ^5.2.2
-  firebase_auth: ^4.2.1
-  firebase_storage: ^11.0.8
+  firebase_auth: ^4.1.0
+  firebase_storage: ^11.0.3
   flutter_chat_types: ^3.6.0
   flutter_chat_ui: ^1.6.6
   http: ^0.13.5
@@ -38,7 +38,7 @@ dependencies:
   path_provider: ^2.0.11
   flutter_firebase_chat_core: ^1.6.4
   uuid: ^3.0.7
-  cloud_firestore: ^4.2.0
+  cloud_firestore: ^4.1.0
   google_sign_in: ^5.4.2
   fluttertoast: ^8.1.1
 
@@ -46,8 +46,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  build_runner: '>=1.6.2 <3.0.0'
-  build_web_compilers: '>=2.12.0 <4.0.0'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -61,8 +59,12 @@ flutter:
     - assets/images/signup.png
     - assets/images/travel.png
     - assets/images/weeee_logo.png
-    - assets/images/festival.png
-    - assets/images/sport.png
+
+
+  # To add assets to your application, add an assets section, like this:
+  # assets:
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
